--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul class="nav">
         <li class="nav-item"><a href="/">Home</a></li>
         <li class="nav-item"><a href="/about">About</a></li>
-        <li class="nav-item"><a href="/signup">Sign Up</a></li>
+        <li class="nav-item"><a href="/signin">Sign In</a></li>
         <li class="nav-item"><a href="/login">Login</a></li>
       </ul>
     </header>
